Add references to Matplotlib notes

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,6 +11,8 @@
    "source": [
     "#### Notas sobre las librerías `Matplotlib` y `Seaborn`, recopiladas a partir de:\n",
     "- [curso de Platzi de Visualización de Datos con Matplotlib y Seaborn](https://platzi.com/cursos/matplotlib-seaborn/)\n",
+    "- [Guía definitiva para dominar Matplotlib](https://platzi.com/blog/matplotlib/)\n",
+    "- [Cheatsheets oficiales de Matplotlib](https://matplotlib.org/cheatsheets/)\n",
     "\n",
     "# Matplotlib"
    ]
